Update build_and_release.yml fix path

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel
     - name: Build Python package
-      run: python ./backand/setup.py sdist bdist_wheel
+      run: python ./backend/setup.py sdist bdist_wheel
     - name: Create Release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       id: create_python_release
