--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,13 @@
-FROM node:21 as build
-
+# build phase
+FROM node:21-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm ci
-
-COPY public/ public/
-COPY src/ src/
-
+COPY . .
 RUN npm run build
 
+# run phase
 FROM nginx:stable-alpine
-
-COPY --from=build /app/build /usr/share/nginx/html
-
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
