--- a/.github/workflows/frontend_ci_cd.yml
+++ b/.github/workflows/frontend_ci_cd.yml
@@ -9,45 +9,50 @@ on:
       - main
 
 jobs:
-# Test and Lint Job
+  # Test and Lint Job
   test-and-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          path: ./frontend  
+          path: ./frontend
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 21.x
+          node-version: 14.x
       - name: Install Dependencies
         run: npm install
+        working-directory: ./frontend
       - name: Run Lint
-        run: npm run lint  
+        run: npm run lint
+        working-directory: ./frontend
       - name: Run Tests
-        run: npm test  
-# Build Job
+        run: npm test
+        working-directory: ./frontend
+  # Build Job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          path: ./frontend 
+          path: ./frontend
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 21.x
+          node-version: 14.x
       - name: Install Dependencies
         run: npm install
+        working-directory: ./frontend
       - name: Build Project
         run: npm run build
+        working-directory: ./frontend
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./frontend/dist
   # Deploy Job
   deploy:
     # Add a dependency to the build job
@@ -59,9 +64,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./frontend/dist
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.CI_CD_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./frontend/dist
