--- a/.github/workflows/frontend_ci_cd.yml
+++ b/.github/workflows/frontend_ci_cd.yml
@@ -15,58 +15,54 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          path: ./frontend
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 21.x
+      - name: Change working directory to frontend
+        working-directory: ./frontend/ 
       - name: Install Dependencies
         run: npm install
-        working-directory: ./frontend
       - name: Run Lint
         run: npm run lint
-        working-directory: ./frontend
       - name: Run Tests
         run: npm test
-        working-directory: ./frontend
+
   # Build Job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          path: ./frontend
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 21.x
+      - name: Change working directory to frontend
+        working-directory: ./frontend/ 
       - name: Install Dependencies
         run: npm install
-        working-directory: ./frontend
       - name: Build Project
         run: npm run build
-        working-directory: ./frontend
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
         with:
           name: production-files
-          path: ./frontend/dist
+          path: ./dist  
+
   # Deploy Job
   deploy:
-    # Add a dependency to the build job
     needs: build
-    # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: production-files
-          path: ./frontend/dist
+          path: ./dist
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.CI_CD_TOKEN }}
-          publish_dir: ./frontend/dist
+          publish_dir: ./dist 
+  
