--- a/.github/workflows/frontend_ci_cd.yml
+++ b/.github/workflows/frontend_ci_cd.yml
@@ -19,14 +19,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 21.x
-      - name: Change to frontend directory
-        run: cd ./frontend
       - name: Install Dependencies
         run: npm install
+        working-directory: ./frontend
       - name: Run Lint
         run: npm run lint  
+        working-directory: ./frontend
       - name: Run Tests
         run: npm test  
+        working-directory: ./frontend
 # Build Job
   build:
     runs-on: ubuntu-latest
@@ -37,17 +38,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 21.x
-      - name: Change to frontend directory
-        run: cd ./frontend
       - name: Install Dependencies
         run: npm install
+        working-directory: ./frontend
       - name: Build Project
         run: npm run build
+        working-directory: ./frontend
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./frontend/dist
   # Deploy Job
   deploy:
     # Add a dependency to the build job
