--- a/.github/workflows/frontend_ci_cd.yml
+++ b/.github/workflows/frontend_ci_cd.yml
@@ -9,26 +9,7 @@ on:
       - main
 
 jobs:
-# Test and Lint Job
-  test-and-lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 21.x
-      - name: Install Dependencies
-        run: npm install
-        working-directory: ./frontend
-      - name: Run Lint
-        run: npm run lint  
-        working-directory: ./frontend
-      - name: Run Tests
-        run: npm test  
-        working-directory: ./frontend
-# Build Job
+# Build Job (with lint)
   build:
     runs-on: ubuntu-latest
     steps:
