--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.15",
+    "@uiw/react-md-editor": "^4.0.4",
+    "@types/uuid": "9.0.8",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "react-simple-code-editor": "^0.13.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -34,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "vite": "^5.2.8",
     "vitest": "^1.4.0"
   }
 }
