--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,17 +34,18 @@ services:
              python manage.py runserver 0.0.0.0:8000"
 
   frontend:
-     build:
-       context: ./frontend
-       dockerfile: Dockerfile
-     container_name: react-frontend
-     depends_on:
-       - backend
-     ports:
-       - "3000:80"
-     volumes:
-       - ./frontend:/app
-       - /app/node_modules
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: react-frontend
+    depends_on:
+      - backend
+    ports:
+      - "3000:80"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
 
 volumes:
   postgres-data:
+    driver: local
